# learn_openglcn_clion

./: 01_01_triangle.cpp  CMakeLists.txt  README.md  f01_0301_shader_uniform.cpp  f01_0302_shaders_interpolation.cpp  f01_0303_shader_class.cpp  f01_0401_texture.cpp  f01_0402_texture_combined.cpp  f01_0501_transformations.cpp  f01_0601_coordinate_systems.cpp  f01_0602_coordinate_systems_depth.cpp  f01_0603_coordinate_systems_multiple.cpp  f01_0701_camera_circle.cpp  f01_0702_camera_keyboard_dt.cpp  f01_0703_camera_mouse_zoom.cpp  f01_0704_camera_class.cpp  f02_0101_color.cpp  f02_0201_basic_lighting_diffuse.cpp  f02_0202_basic_lighting_specular.cpp  glad.c  macros.h
include/: stb_image.h
include/glad/: glad.h
include/learnopengl/: shader_s.h
shaders/: 2.1.basic_lighting.fs  2.1.basic_lighting.vs
